--- a/BiliOnlineRank/BiliOnlineRank/BiliOnlineRank.csproj
+++ b/BiliOnlineRank/BiliOnlineRank/BiliOnlineRank.csproj
@@ -37,6 +37,8 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +48,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BiliLogin\BiliLoginQR.cs" />
+    <Compile Include="BiliLogin\MoblieLoginWindow.xaml.cs">
+      <DependentUpon>MoblieLoginWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="BiliLogin\QRCoder\AbstractQRCode.cs" />
+    <Compile Include="BiliLogin\QRCoder\QRCode.cs" />
+    <Compile Include="BiliLogin\QRCoder\QRCodeData.cs" />
+    <Compile Include="BiliLogin\QRCoder\QRCodeGenerator.cs" />
+    <Compile Include="BiliLogin\UserInfo.cs" />
     <Compile Include="Bili\BiliApi.cs" />
     <Compile Include="Bili\BiliLive.cs" />
     <Compile Include="Bili\Models\AnchorOnlineGoldRank.cs" />
@@ -56,11 +67,45 @@
     <Compile Include="JsonUtil\Json.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RSAUtil\RSAEncrypter.cs" />
     <Compile Include="ApiProvider.cs" />
+    <Compile Include="WpfAnimatedGif\AnimationCache.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifApplicationExtension.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifBlock.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifBlockKind.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifColor.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifCommentExtension.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifDecoderException.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifExtension.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifFile.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifFrame.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifGraphicControlExtension.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifHeader.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifHelpers.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifImageData.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifImageDescriptor.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifLogicalScreenDescriptor.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifPlainTextExtension.cs" />
+    <Compile Include="WpfAnimatedGif\Decoding\GifTrailer.cs" />
+    <Compile Include="WpfAnimatedGif\ImageAnimationController.cs" />
+    <Compile Include="WpfAnimatedGif\ImageBehavior.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="BiliLogin\icon.ico" />
+    <Resource Include="BiliLogin\img\2233pic.png" />
+    <Resource Include="BiliLogin\img\banner.jpg" />
+    <Resource Include="BiliLogin\img\icons.png" />
+    <Resource Include="BiliLogin\img\loadTV.gif" />
+    <Resource Include="BiliLogin\img\qr-refresh.png" />
+    <Resource Include="BiliLogin\img\tv.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="BiliLogin\MoblieLoginWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
